Sistemata connessione in locale

--- a/docs/.htaccess
+++ b/docs/.htaccess
@@ -1,22 +1,54 @@
-ErrorDocument 404 /fbellon/404.html
-ErrorDocument 500 /fbellon/500.html
+#ErrorDocument 404 /fbellon/404.html
+ErrorDocument 404 /404.html
+
+#ErrorDocument 500 /fbellon/500.html
+ErrorDocument 500 /500.html
 
 RewriteCond %{HTTP_REFERER} ^$
-RewriteRule ^assets\/(.*)$ /fbellon/403.html [L,R=301]
+#RewriteRule ^assets\/(.*)$ /fbellon/403.html [L,R=301]
+RewriteRule ^assets\/(.*)$ /403.html [L,R=301]
 
 RewriteEngine On
 #Redirect dei file html ai file php corrispondenti
-RewriteRule ^auto\.html$ /fbellon/auto.php [L,R=301]
-RewriteRule ^registrazione\.html$ /fbellon/registrazione.php [L,R=301]
-RewriteRule ^login\.html$ /fbellon/login.php [L,R=301]
-RewriteRule ^test\_drive\.html$ /fbellon/test_drive.php [L,R=301]
-RewriteRule ^listino\.html$ /fbellon/listino.php [L,R=301]
-RewriteRule ^index\.html$ /fbellon/index.php [L,R=301]
-RewriteRule ^utente\.html$ /fbellon/utente.php [L,R=301]
-RewriteRule ^amministratore\.html$ /fbellon/amministratore.php [L,R=301]
-RewriteRule ^eliminaUtente\.html$ /fbellon/eliminaUtente.php [L,R=301]
-RewriteRule ^modificaUtente\.html$ /fbellon/modificaUtente.php [L,R=301]
-RewriteRule ^(.*).php/(.*)$ /fbellon/404.html [L,R=301]
-RewriteRule ^(.*).html/(.*)$ /fbellon/404.html [L,R=301]
-RewriteRule ^$ /fbellon/index.php [L,R=301]
-RewriteRule ^dbConnection\.php$ /fbellon/403.html [L,R=301]
+
+#RewriteRule ^auto\.html$ /fbellon/auto.php [L,R=301]
+RewriteRule ^auto\.html$ /auto.php [L,R=301]
+
+#RewriteRule ^registrazione\.html$ /fbellon/registrazione.php [L,R=301]
+RewriteRule ^registrazione\.html$ /registrazione.php [L,R=301]
+
+#RewriteRule ^login\.html$ /fbellon/login.php [L,R=301]
+RewriteRule ^login\.html$ /login.php [L,R=301]
+
+#RewriteRule ^test\_drive\.html$ /fbellon/test_drive.php [L,R=301]
+RewriteRule ^test\_drive\.html$ /test_drive.php [L,R=301]
+
+#RewriteRule ^listino\.html$ /fbellon/listino.php [L,R=301]
+RewriteRule ^listino\.html$ /listino.php [L,R=301]
+
+#RewriteRule ^index\.html$ /fbellon/index.php [L,R=301]
+RewriteRule ^index\.html$ /index.php [L,R=301]
+
+#RewriteRule ^utente\.html$ /fbellon/utente.php [L,R=301]
+RewriteRule ^utente\.html$ /utente.php [L,R=301]
+
+#RewriteRule ^amministratore\.html$ /fbellon/amministratore.php [L,R=301]
+RewriteRule ^amministratore\.html$ /amministratore.php [L,R=301]
+
+#RewriteRule ^eliminaUtente\.html$ /fbellon/eliminaUtente.php [L,R=301]
+RewriteRule ^eliminaUtente\.html$ /eliminaUtente.php [L,R=301]
+
+#RewriteRule ^modificaUtente\.html$ /fbellon/modificaUtente.php [L,R=301]
+RewriteRule ^modificaUtente\.html$ /modificaUtente.php [L,R=301]
+
+#RewriteRule ^(.*).php/(.*)$ /fbellon/404.html [L,R=301]
+RewriteRule ^(.*).php/(.*)$ /404.html [L,R=301]
+
+#RewriteRule ^(.*).html/(.*)$ /fbellon/404.html [L,R=301]
+RewriteRule ^(.*).html/(.*)$ /404.html [L,R=301]
+
+#RewriteRule ^$ /fbellon/index.php [L,R=301]
+RewriteRule ^$ /index.php [L,R=301]
+
+#RewriteRule ^dbConnection\.php$ /fbellon/403.html [L,R=301]
+RewriteRule ^dbConnection\.php$ /403.html [L,R=301]
